tests/sema/negative/unknown_struct_type.nv
fn main() : void {
    let p : Point = Point { x: 1 };
    return;
}
